tests/build/cases/widget_new/missing_value6.stderr
error: expected `;`
 --> cases/widget_new/missing_value6.rs:7:9
  |
7 |         margin = 0;
  |         ^^^^^^

error[E0061]: this method takes 2 arguments but 1 argument was supplied
 --> cases/widget_new/missing_value6.rs:6:9
  |
5 |       let _ = Wgt! {
  |  _____________-
6 | |         background_gradient = 0.deg(),
  | |         ^^^^^^^^^^^^^^^^^^^
7 | |         margin = 0;
8 | |     };
  | |_____- an argument is missing
  |
note: associated function defined here
 --> $WORKSPACE/zero-ui/src/properties/visual.rs
  |
  | pub fn background_gradient(child: impl UiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> impl UiNode {
  |        ^^^^^^^^^^^^^^^^^^^
help: provide the argument
   --> |$WORKSPACE/zero-ui/src/widgets.rs
    |
    | background_gradient(0.deg(), /* stops */)
    |
